# fastapi_zitadel_quote_example

./: pyproject.toml  readme.md  sample.env  sample2.env
app/: __init__.py
app/core/: authorization.py  validator.py
